--- a/src/app/api/api.component.html
+++ b/src/app/api/api.component.html
@@ -1,1 +1,5 @@
-<p>api works!</p>
+<div *ngFor="let item of imagens">
+    <p>{{ item.title}}</p>
+    <p>{{ item.albumId}}</p>
+    <p>{{ item.url}}</p>
+</div>
